<resources>
    <string name="app_name">NFCrypto</string>

    <!-- Namen der Rollen -->
    <string name="alice">Alice</string>
    <string name="alice_short">A</string>
    <string name="bob">Bob</string>
    <string name="bob_short">B</string>
    <string name="eve">Eve</string>
    <string name="eve_short">E</string>

    <!-- Namen der Modi -->
    <string name="plaintext">Klartext</string>
    <string name="cesar">Cäsar</string>
    <string name="vigenere">Minikey</string>
    <string name="aes">AES</string>

    <!-- Allgemeine Strings -->
    <string name="read_msg">Nachricht einlesen</string>
    <string name="read_key">Schlüssel einlesen</string>
    <string name="nachricht">Nachricht</string>
    <string name="schlüssel">Schlüssel</string>
    <string name="or">oder:</string>

    <!-- Allgemeine Strings für leere Felder -->
    <string name="empty_text_encrypted">Die verschlüsselte Nachricht wird hier angezeigt.</string>
    <string name="empty_text_decrypted">Die entschlüsselte Nachricht wird hier angezeigt.</string>
    <string name="empty_text_encrypted_eve">Die entschlüsselte Nachricht wird hier angezeigt, wenn du eine Nachrichtenkarte an dein Smartphone hältst.</string>
    <string name="empty_text_enter_msg">Gib eine Nachricht ein.</string>
    <string name="empty_text_generateKey">Hier wird dein Schlüssel angezeigt.</string>
    <string name="empty_text_TODO">Hier kreativ werden!</string> <!-- Platzhalter -->


    <!-- Beschreibungen für Activities (nach chronologischer Verwendung in der App sortiert)-->

    <!-- activity_welcome -->
    <string name="welcome_welcome">Willkommen!</string>
    <string name="welcome_task">Mit dieser App kannst du verschiedene Verschlüsselungen ausprobieren und über NFC-Karten Nachrichten an deine Freunde schreiben.\n\nStelle bitte zuerst sicher, dass du NFC angeschalten hast.</string>
    <string name="welcome_guided">Im Unterricht</string>
    <string name="welcome_unguided">Alleine</string>
    <string name="welcome_use">Wie möchtest du die App verwenden?</string>
    <string name="welcome_nfcOn">Ich habe NFC angeschaltet.</string>

    <!-- activity_persons -->
    <string name="persons_task">Wähle eine Rolle.</string>
    <string name="persons_alice">"Alice schreibt Nachrichten und sendet sie an Bob. Sie kann diese Nachrichten zuvor verschlüsseln."</string>
    <string name="persons_bob">Bob empfängt Nachrichten von Alice und kann diese, falls nötig, entschlüsseln.</string>
    <string name="persons_eve">Eve fängt Nachrichten ab, die nicht an sie adressiert sind. Sie muss selbst versuchen die Nachrichten zu entschlüsseln.</string>
    <string name="persons_info">Du kannst die Auswahl später wieder ändern.</string>

    <!-- activity_alice_info -->
    <string name="alice_info_info">Was ist zu tun?</string>
    <string name="alice_info_text">Gib zuerst im Textfeld eine Nachricht ein.</string>
    <string name="alice_info_spinner">Wähle anschließend eine Verschlüsselungsart.</string>
    <string name="alice_info_lock">Drücke diesen Button, um deine Nachricht zu verschlüsseln.
        Wenn du keinen Schlüssel ausgewählt hast, wird ein zufälliger Schlüssel erzeugt.</string>
    <string name="alice_info_wrench">Drücke auf diesen Button um Einstellungen für den Schlüssel vorzunehmen.
        Hier kannst du auch deinen letzen Schlüssel wiederverwenden.</string>
    <string name="alice_info_send">Drücke auf diesen Button um deine Nachricht zu versenden. Hierfür benötigst du deine NFC-Karten.</string>

    <!-- activity_encrypt_details -->
    <string name="lastKey">Letzer Schlüssel</string>
    <string name="randomKey">Zufälliger Schlüssel</string>
    <string name="anwenden">Anwenden</string>
    <string name="encrypt_details_caesar">Deine Cesarverschlüsselung</string>
    <string name="encrypt_details_caesar_info">Stelle unten den Buchstaben ein, nach welchem du deinen Text verschlüsseln möchtest.</string>
    <string name="encrypt_details_minikey">Deine Minikeyverschlüsselung</string>
    <string name="encrypt_details_minikey_info">Gib ein sechsstelliges Wort als Schlüssel ein.</string>
    <string name="encrypt_details_aes">Deine AES-Verschlüsselung</string>
    <string name="encrypt_details_aes_info">Der AES-Schlüssel ist zu lang um ihn von Hand einzugeben.</string>
    <string name="encrypt_details_plain">Deine Klartextverschlüsselung</string>
    <string name="encrypt_details_plain_info">Bei der Klartextverschlüsselung handelt es sich genau genommen nicht um eine Verschlüsselung,
        denn dein Text wird unverschlüsselt als sogenannter Klartext versendet. Daher gibt es auch keinen Schlüssel.</string>

    <!-- activity_nfcwrite -->
    <string name="nfc_info">Wähle aus welche NFC-Karte du schreiben willst.</string>
    <string name="nfc_task">Halte anschließend die Karte an dein Handy.\n\n
        Der NFC-Reader befindet sich meistens in der Näher der Kamera.</string>

    <!-- activity_eve_info -->
    <string name="eve_info_info">Was ist zu tun?</string>
    <string name="eve_info_text">Lies zuerst eine Nachrichtenkarte ein.</string>
    <string name="eve_info_spinner">Wähle anschließend eine Verschlüsselungsart.</string>
    <string name="eve_info_lock">Drücke nun diesen Button, um die Nachricht mit den gewählten Schlüsseleinstellungen zu entschlüsseln.</string>
    <string name="eve_info_wrench">Drücke auf diesen Button um Einstellungen für den Schlüssel vorzunehmen.</string>
    <string name="eve_info_wrench2">Für manche Verschlüsselungen gibt es ein Brute-Force-Verfahren, das automatisch versucht die Nachricht zu entschlüsseln.</string>

    <!-- activity_bob_info -->
    <string name="bob_info_info">Was ist zu tun?</string>
    <string name="bob_info_text">Lies zuerst eine Nachrichtenkarte und, falls du möchtest, eine Schlüsselkarte ein, indem du den richtigen Schalter aktivierst.</string>
    <string name="bob_info_key">Wähle diesen Button um den letzten Schlüssel wiederzuverwenden.</string>
    <string name="bob_info_lock">Drücke diesen Button, um die Nachricht anschließend zu entschlüsseln.</string>

    <!-- activity_cryptotools_AES -->
    <string name="cryptotools_aes_info">Wenn du extrem reich bist, könntest du jetzt mit dem Bau eines Supercomputers anfangen.
        In etwas mehr als 80 Jahren kannst du dann die Verschlüsselung knacken.</string>
    <string name="cryptotools_aes_title">AES Entschlüsselungstool</string>

    <!-- activity_cryptotools_caesar -->
    <string name="cryptotools_caesar_info">Du willst versuchen den Text mit der Cesar-Verschlüsselung zu knacken?
        Na dann stell unten den Buchstaben ein, von dem du glaubst, dass er der Schlüssel ist.
        Das nächste Mal kannst du auch das Brute-Force-Verfahren testen, das die Buchstaben automatisch durchprobiert.</string>
    <string name="cryptotools_caesar_title">Cesar Entschlüsselungstool</string>
    <string name="cryptotools_caesar_decrypt">Entschlüsseln</string>

    <!-- activity_cryptotools_minikey -->
    <string name="cryptotools_minikey_info">Du willst versuchen den Text mit der Minikey-Verschlüsselung zu knacken?
        Dafür steht dir ein sogenanntes Brute-Force-Verfahren zur Verfügung, das alle Möglichkeiten ausprobiert und dir die Lösung anzeigt.</string>
    <string name="cryptotools_minikey_title">Minikey Entschlüsselungstool</string>
    <string name="cryptotools_minikey_decrypt">Brute-Force verwenden</string>

    <!-- activity_cryptotools_plain -->
    <string name="cryptotools_plain_info">Ein Klartext ist eine unverschlüsselte Nachricht.\n\n
        Wenn du die Nachricht nicht lesen kannst, ist es also vermutlich keine Klartextnachricht.</string>
    <string name="cryptotools_plain_title">Klartext Entschlüsselungstool</string>

    <!-- Beschreibungen für Cäsar-Spinner-->
    <string name="none">keine</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>

    <!-- activity_code -->
    <string name="code_info">Mithilfe eines Freischaltcodes kannst du neue Funktionen freischalten.\n\n
        Den Code erhältst du von deinem Lehrer oder deiner Lehrerin.</string>
    <string name="code_unlock">Freischalten</string>

    <!-- Passwörter für Lehrermodul -->
    <string name="pwces">AlterRoemer</string>
    <string name="pwvig">winzig</string>
    <string name="pwaes">Ende</string>

</resources>
