<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_screen">

    <TextView
        android:id="@+id/nfc_infotext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nfc_info"
        android:textAlignment="center"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/margin_screen"
        tools:context=".activities.ActivityNFCWrite">

        <Button
            android:id="@+id/activity_nfcwrite_button_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/nachricht" />

        <Button
            android:id="@+id/activity_nfcwrite_button_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:text="@string/schlüssel" />

    </RelativeLayout>

</LinearLayout>
