<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_screen">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/Activity_welcome_text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_welcome"
        android:textAlignment="center"
        android:textAppearance="@style/font_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/Activity_welcome_text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_task"
        android:textAlignment="center"
        android:textAppearance="@style/font_explanation_default" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <CheckBox
        android:id="@+id/activity_welcome_checkBox_nfcOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_nfcOn" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/activity_welcome_text_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_distance"
        android:text="@string/welcome_use"
        android:textAlignment="center"
        android:textAppearance="@style/font_explanation_default"
        android:visibility="invisible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" />

    <LinearLayout
        android:id="@+id/activity_welcome_buttonsGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/activity_welcome_button_guided"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:clickable="true"
            android:src="@drawable/play"
            app:backgroundTint="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/welcome_guided"
            android:textAppearance="@style/font_explanation_default" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/welcome_unguided"
            android:textAlignment="textEnd"
            android:textAppearance="@style/font_explanation_default" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Activity_welcome_button_unguided"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/play"
            app:backgroundTint="@color/colorPrimaryDark" />

    </LinearLayout>

</LinearLayout>