<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:padding="@dimen/margin_screen">

        <TextView
            android:id="@+id/activity_encrypt_details_plain_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/encrypt_details_plain"
            android:textAppearance="@style/font_explanation_default"
            android:textSize="24sp"
            tools:layout_height="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_encrypt_details_plain_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_distance"
                android:layout_marginBottom="@dimen/margin_distance"
                android:gravity="center"
                android:text="@string/encrypt_details_plain_info"
                android:textAppearance="@style/font_explanation_default"
                tools:layout_height="120dp" />

            <Button
                android:id="@+id/activity_encrypt_details_plain_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_distance"
                android:text="@string/anwenden" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>