<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_screen"
    tools:context=".activities.ActivityCryptotoolsCesar">

    <TextView
        android:id="@+id/activity_encrypt_details_plain_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_distance"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/cryptotools_caesar_title"
        android:textAppearance="@style/font_title_eve" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_min_textbox_fullscreen"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_cryptotools_caesar_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_distance"
            android:layout_marginBottom="@dimen/margin_distance"
            android:gravity="center"
            android:text="@string/cryptotools_caesar_info"
            android:textAppearance="@style/font_explanation_default" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height_min_space" />

        <Spinner
            android:id="@+id/activity_cryptotools_caesar_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/width_button_default"
            android:textAppearance="@style/font_explanation_default"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height_min_space" />

        <TextView
            android:id="@+id/activity_cryptotools_caesar_textView_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/font_msg_default" />

    </LinearLayout>

    <Button
        android:id="@+id/activity_cryptotools_caesar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/cryptotools_caesar_decrypt"
        android:textAppearance="@style/font_explanation_default"/>

</LinearLayout>